# chocolate-shop

./: .env  .gitignore  Dockerfile  README.md  categories-products-data.sql  categories.csv  db.sqlite3  docker-compose.yaml  entrypoint.sh  initial_script.sql  products.csv  pyproject.toml
accounts/: adapters.py  forms.py  managers.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_review_rating.py  0004_delete_review.py
common/: views.py
config/: settings.py  urls.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_basket_history.py  0002_order_total_sum.py  0003_alter_order_status.py  0004_alter_order_address_alter_order_basket_history_and_more.py
products/: admin.py  filters.py  forms.py  managers.py  models.py  urls.py  views.py  widgets.py
products/migrations/: 0001_initial.py  0002_categorygroup_remove_product_category_and_more.py  0002_product_slug_productcategory_slug.py  0002_remove_product_average_rating.py  0003_product_ingredients.py  0003_review.py  0004_basket.py  0005_alter_basket_product_alter_basket_user.py
products/templatetags/: category_tag.py
static/css/: style.css
static/js/: basket_change_quantity.js  basket_items_counter.js
templates/: base.html  home.html
templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  profile.html  signup.html  verification_sent.html
templates/basket/: basket.html  (+1 more)
(+13 files in other folders)
